syntax="proto2";

package mxtag.pb;

message Value
{
  optional float  float_value = 1;
  optional double double_value = 2;
  optional sint64 int_value = 3;
  optional uint64 uint_value = 4;
  optional string str_value = 5;
  optional bytes  bytes_value = 6;
}

message Tag
{
  optional string equipment = 1;
  optional string tag = 2;
  optional uint64 at_ms = 3;
  optional Value value = 4;
  optional int32  value_type = 5;
  optional string unit = 6;
}

message RequestData
{
  optional string module = 1;
  optional string device = 2;
  optional string name   = 3;
}

message Request
{
  optional string method = 1;
  repeated RequestData list = 2;
}

message Response
{
  optional string method = 1;
  repeated Tag list = 2;
}
